# keychain

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  Readme.md  pyproject.toml
.github/workflows/: build_project.yml  pre_commit.yml
backend/: app.py  config.py
backend/api/: index.py
backend/database/: models.py
backend/templates/: index.html
frontend/: package.json  webpack.config.js
frontend/src/: App.js  AuthPage.js  index.js
frontend/src/components/: ClickOutsideRef.js  Icon.js  InputRow.js  Message.js  ModalWindow.js  index.js
frontend/src/components/floatingChip/: FloatingChip.js  index.js  style.scss
frontend/src/components/navbar/: Navbar.js  style.scss
frontend/src/components/pages/: PasswordPage.js  index.js  style.scss
frontend/src/components/pages/center/: AddField.js  Center.js  FieldItem.js  ModifyField.js  style.scss
frontend/src/components/pages/leftSide/: AddPassword.js  LeftSide.js  index.js  style.scss
frontend/src/components/postRequestModal/: PostModal.js  index.js
frontend/src/createNewPasswordWindow/: CreateNewPassword.js  NewField.js
frontend/src/passwordBlock/: Field.js  PasswordBlock.js  PasswordInput.js  PasswordRow.js  index.js
frontend/src/passwordSelect/: Item.js  PasswordSelect.js  index.js
frontend/styles/: style.scss
keychain/: __init__.py  __main__.py  app.py  config.py  logging_config.py
keychain/alembic/: env.py
keychain/alembic/versions/: 2024_11_09_2001-85a3c034b32b_initial.py  2024_11_16_2017-56fda1ef4adc_change_field_value_field_data_type.py  2024_11_17_2039-51c70769c18a_add_user_id_to_password_model.py  2024_11_21_1931-aa6f04f16526_password_name_not_unique.py
keychain/api/: __init__.py  field.py  get_user_id.py  index.py  password.py
keychain/api/common/: common.py  schemas.py
keychain/api/field/: __init__.py  api.py  schemas.py  sqla_interface.py
keychain/api/password/: __init__.py  api.py  schemas.py
keychain/caller/: auth.py  caller.py  dataclasses.py
keychain/cli/: __init__.py  caller.py  main.py  web_client.py
keychain/client/: auth.py  client.py  dataclasses.py  types.py
keychain/client/web_client/: __init__.py  client.py  types.py
keychain/client/web_client/auth/: __init__.py  auth.py  base.py
keychain/config/: base.py  config.py
keychain/database/: models.py
keychain/models/: __init__.py  fields.py  password.py  types.py
keychain/views/: __init__.py  views.py
requirements/: base.in  base.txt  development.in  development.txt
