[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keychain"
dynamic = ["version"]
keywords = ["password", "encryption", "keychain"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

authors = [{ email = "dmitriyvasil@gmail.com" }]
maintainers = [{ email = "dmitriyvasil@gmail.com" }]
description = "Simple keychain service to store and retrieve secrets"

readme = "Readme.md"
license = { file = "LICENSE" }

requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.4, <43.0.0",
    "flask>=2.2.5, <3.0.0",
    "flask-appbuilder>=4.4.1, <5.0.0",
    "flask-migrate>=3.1.0, <4.0",
    "python-dotenv",
    "sqlalchemy>=1.4, <2",
]

[tool.hatch.version]
path = "keychain/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["keychain"]

[project.scripts]
keychain = "keychain.cli.main:main"

[project.urls]
Homepage = "https://github.com/dmitriyVasilievich1986/keychain"
